# media-dashboard

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml  download_fonts.sh  entrypoint.sh
.cargo/: audit.toml
src/: main.rs
src/api/: emby.rs  jackett.rs  jellyfin.rs  lidarr.rs  mod.rs  plex.rs  prowlarr.rs  radarr.rs  sonarr.rs  transmission.rs
src/db/: mod.rs
static/: index.html  jackett.html  lidarr.html  logs.html  plex.html  prowlarr.html  radarr.html  settings.html  setup.html  sonarr.html  style.css  transmission.html
static/fonts/: download_fonts.py  icons.css  inter.css
