[package]
name = "media-dashboard"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
async-trait = "0.1"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-rustls", "sqlite", "macros"] }
urlencoding = "2.1"
chrono = { version = "0.4", features = ["serde"] }

[patch.crates-io]
getrandom = { git = "https://github.com/rust-random/getrandom", rev = "v0.2.15" }
home = { git = "https://github.com/rust-lang/cargo", tag = "home-0.5.11" }
base64ct = { git = "https://github.com/RustCrypto/formats", tag = "base64ct/v1.6.0" }
