[package]
name = "media-dashboard"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[dependencies]
axum = "0.7"
tokio = { version = "1.36", features = ["full"] } # Updated from 1.0 for better stability
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Updated to 0.12 to resolve several dependencies-related advisories
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15" # Note: 'dotenv' is unmaintained; 'dotenvy' is the drop-in secure replacement
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-aws-lc-rs", "sqlite", "macros"] }
urlencoding = "2.1"
chrono = { version = "0.4", features = ["serde"] }

# REMOVE THE [patch.crates-io] SECTION UNLESS YOU ARE DOING CORE DEVELOPMENT ON THOSE CRATES
